Get niri running

--- a/wm/waybar/.config/waybar/style.css
+++ b/wm/waybar/.config/waybar/style.css
@@ -1,4 +1,4 @@
-@import "/nix/store/1c8qc6hm56hjk48smc5337d9mnxx188p-source/themes/frappe.css";
+/* @import "/nix/store/1c8qc6hm56hjk48smc5337d9mnxx188p-source/themes/frappe.css"; */
 
 * {
   all: unset;
