--- a/wm/ags/.config/ags/style.css
+++ b/wm/ags/.config/ags/style.css
@@ -6,14 +6,12 @@
 	margin: 0.0 0.5rem;
 
 	color: white;
-	/* color: dimgray; */
+	/* color: white; */
 
 	background: rgba(128, 128, 128, 0.15);
-	/* background-image: linear-gradient(180deg, #ffffff00, #a2a2a200), url('./res/noise.png'); */
 	/* background-blend-mode: multiply; */
-	/* background-image: linear-gradient(180deg, #000000, #000000), url('./res/noise.png'); */
-	/* background-image: linear-gradient(180deg, #a2a2a2, #ffffff), url('./res/noise.png'); */
-	/* background-blend-mode: exclusion; */
+	/* background-image: linear-gradient(180deg, #5a5a5a, #3a3a3a), url('./res/noise.png'); */
+	/* background-image: linear-gradient(0deg, #a2a2a2, #ffffff), url('./res/noise.png'); */
 }
 
 separator {
@@ -53,7 +51,7 @@ separator {
 
 .volume trough {
 	min-height: 10px;
-	background-color: rgba(128, 128, 128, 0.55);
+	background-color: rgba(255, 255, 255, 0.35);
 	border: none;
 	opacity: 0.3;
 }
