feat: update nvim & more

--- a/wm/ignis-git/.config/ignis/scss/notification_popup.scss
+++ b/wm/ignis-git/.config/ignis/scss/notification_popup.scss
@@ -2,8 +2,13 @@
     @include window;
     min-width: 25rem;
 
+    & .notification-icon {
+      margin-right: 1.0rem;
+    }
+
     & .notification-close {
         @include hover($surface);
+        color: $surfaceBright;
     }
 
     & .notification-action {
